minor changes 16:05 21-oct.2019

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Bhupinder Bhattarai (just to test server side scripting skills). This site is simply made to fetch weather of any place, you wanted to know!!</p>
         <img class="portrait" src="./img/me.jpg" alt="robot">
     </div>
     {{>footer}}
