--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -8,6 +8,9 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>If you have any suggestions related this website, or found any bug, then mail me at bhupindersharma1799@gmail.com</a></p>
+            <br>
+            <p>If you like my work, please star my <a class="help-a1" target="blank" href="https://github.com/Tech1799/weather-website">github</a> project.</p>
             <p>{{helpText}}</p>
         </div>
         {{>footer}}
