--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,3 +53,9 @@ button{
     color: white;
     padding: 8px;
 }
+
+.help-a1{
+    color: coral;
+    margin-right: 16px;
+    text-decoration: none;
+}
