--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -8,6 +8,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>Type here any location: </p>
 
         <form>
             <input type="text" placeholder="location">
